--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <div class="cont-gral-creditos">
         <div class="con-cred-texto">
           <!--subtitulo-->
-          <h2>Seccion de Creditos</h2>
+          <h2>Seccion de Creditoszz</h2>
           <p>
             El crédito es un préstamo de dinero que una parte otorga a otra, con
-            el compromiso de que, en el futuro, quien lo recibe devolverá dicho
+            el compromiso de ssque, en el futuro, quien lo recibe devolverá dicho
             préstamo en forma gradual (mediante el pago de cuotas) o en un solo
             pago y con un interés adicional que compensa a quien presta, por
             todo el tiempo que no tuvo ese dinero.
