--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <!--subtitulo-->
           <h2>Seccion de Creditoszz</h2>
           <p>
-            El crédito es un préstamo de dinero que una parte otorga a otra, con
+            El crédito es unssss préstamo de dinero que una parte otorga a otra, con
             el compromiso de ssque, en el futuro, quien lo recibe devolverá dicho
             préstamo en forma gradual (mediante el pago de cuotas) o en un solo
             pago y con un interés adicional que compensa a quien presta, por
