--- a/Proyecto.html
+++ b/Proyecto.html
@@ -118,16 +118,16 @@
             <label>Intereses</label>
             <ul class="lista-checkbox">
               <li>
-                <label><input type="checkbox" value="salud" /> Salud</label>
+                <input type="checkbox" id="salud" value="salud" />
+                <label for="salud">Salud</label>
               </li>
               <li>
-                <label><input type="checkbox" value="belleza" /> Belleza</label>
+                <input type="checkbox" id="belleza" value="belleza" />
+                <label for="belleza">Belleza</label>
               </li>
               <li>
-                <label
-                  ><input type="checkbox" value="suplementos" />
-                  Suplementos</label
-                >
+                <input type="checkbox" id="suplementos" value="suplementos" />
+                <label for="suplementos">Suplementos</label>
               </li>
             </ul>
           </div>
@@ -136,16 +136,12 @@
             <label>Género</label>
             <ul class="lista-radio">
               <li>
-                <label
-                  ><input type="radio" name="genero" value="masculino" />
-                  Masculino</label
-                >
+                <input type="radio" id="masculino" name="genero" value="masculino" />
+                <label for="masculino">Masculino</label>
               </li>
               <li>
-                <label
-                  ><input type="radio" name="genero" value="femenino" />
-                  Femenino</label
-                >
+                <input type="radio" id="femenino" name="genero" value="femenino" />
+                <label for="femenino">Femenino</label>
               </li>
             </ul>
           </div>
